--- a/ShopDienThoaiAPI/ShopDienThoaiAPI.csproj
+++ b/ShopDienThoaiAPI/ShopDienThoaiAPI.csproj
@@ -480,6 +480,7 @@
     <Content Include="Areas\Admin\Views\Shared\_LeftBar.cshtml" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\Ordered\OrderDetail.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
